@@ -1,4 +1,9 @@
 2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>
+	
+	* src/planner-eds-plugin.c: 
+	Fixed castings and some little style issues
+
+2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>
 
 	* configure.in
 	* src/Makefile.am:
